--- a/css/creative.css
+++ b/css/creative.css
@@ -184,7 +184,8 @@ header {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-    filter: grayscale(100%);
+    background-color:grey;
+    background-blend-mode:luminosity;
 }
 
 header .header-content {
